--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-telethon
 aiofiles
 aiohttp
 apscheduler
@@ -8,7 +7,6 @@ colour
 covid
 cowpy
 dataclasses
-pyminizip
 DateTime
 emoji
 fonttools
@@ -30,7 +28,6 @@ justwatch
 lottie
 lyricsgenius
 markdown
-markdown-it-py
 motor
 moviepy
 nekos.py
@@ -69,11 +66,10 @@ validators
 vcsi
 wand
 wget
-yt_dlp
+youtube_dl
 py-tgcalls==0.9.3
 
-
-git+https://github.com/sandy1709/Telethon@beta
+git+https://github.com/sandy1709/Telethon
 git+https://github.com/goldsmith/Wikipedia
 git+https://github.com/sandy1709/py-googletrans
 git+https://github.com/alexmercerind/youtube-search-python
