--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+telethon
 aiofiles
 aiohttp
 apscheduler
@@ -7,6 +8,7 @@ colour
 covid
 cowpy
 dataclasses
+pyminizip
 DateTime
 emoji
 fonttools
@@ -28,6 +30,7 @@ justwatch
 lottie
 lyricsgenius
 markdown
+markdown-it-py
 motor
 moviepy
 nekos.py
@@ -66,10 +69,11 @@ validators
 vcsi
 wand
 wget
-youtube_dl
+yt_dlp
 py-tgcalls==0.9.3
 
-git+https://github.com/sandy1709/Telethon
+
+git+https://github.com/sandy1709/Telethon@beta
 git+https://github.com/goldsmith/Wikipedia
 git+https://github.com/sandy1709/py-googletrans
 git+https://github.com/alexmercerind/youtube-search-python
