--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
 telethon
-aiofiles
+setuptools
+wheel
 aiohttp
-apscheduler
-cairosvg
+beautifulsoup4
+cfscrape
 cloudscraper
-colour
-covid
 cowpy
-dataclasses
-pyminizip
-DateTime
-emoji
+colour
+cryptg
+csvfaker
+fontTools
 emoji==1.7.0
+httpx[http2]
 fonttools
 geopy
 gitpython
@@ -19,25 +19,27 @@ glitch_this
 google-api-python-client
 google-auth-httplib2
 google-auth-oauthlib
+googletrans>=3.0.0
+gpytranslate==1.4.0
+gsearch
 gtts
 hachoir
 heroku3
 html-telegraph-poster
-httpx[http2]
 humanize
-IMDbPY
-jikanpy
+jotquote
 justwatch
+kwot
 lottie
+lxml
+jikanpy
 lyricsgenius
 markdown
-markdown-it-py
 motor
-moviepy
-nekos.py
-opencv-python-headless
+patool
 Pillow
 prettytable
+programmingquotes
 psutil
 psycopg2
 pyfiglet
@@ -45,31 +47,33 @@ PyGithub
 pygments
 pylast
 pymediainfo
-PyMuPDF
 pySmartDL
 python-barcode
-python-dotenv
+pyTelegramBotAPI==3.7.7
+pytuneteller
 pytz
 qrcode
-randomstuff.py
-regex
+wget
+urlextract
+IMDbPY
+ShazamAPI
 requests
 search-engine-parser
 selenium
-setuptools
-ShazamAPI
 spamwatch
 speedtest-cli
-sqlalchemy-json
 sqlalchemy==1.3.23
+sqlalchemy-json
 telegraph
+telethon-session-sqlalchemy
 tgcrypto
-ujson
-urlextract
+tswift
+PyMuPDF
 validators
 vcsi
 wand
-wget
+wikipedia
+ujson
 yt_dlp
 py-tgcalls==0.9.3
 
